--- a/Resources/config.plist
+++ b/Resources/config.plist
@@ -1,4 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<plist version="1.0">
 <dict>
-<key>OpenAI_API_Key</key>
-<string>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</string>
+	<key>OPENAI_API_KEY</key>
+	<string>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</string>
+	<key>OFFLINE_MODE</key>
+	<false/>
 </dict>
+</plist>
